# PINNBench

./: README.md  pyproject.toml
PINN_clean/: main.py
PINN_clean/PINN_types/: PINN_MLP.py  PINN_Transformer.py
PINN_clean/PINN_utils/: Activations.py  Domain_sampler.py  Mappings.py  Training_schemes.py  Weight_balancing.py
PINN_clean/PINN_utils/Equations/: Boundary_conditions.py  Initial_conditions.py  PDE_equations.py
PINN_clean/logs/TEST_np/: MLP_Adam_CONV_beta=20.npy  MLP_Adam_Conv_causal_beta=25.npy  TEST_large.npy  Transformer_Adam_Conv_beta=25.npy  Transformer_LBFGS_Conv_beta=50.npy  Transformer_LS_Wave_beta=3.npy
