[tool.poetry]
name = "pinnbench"
version = "0.1.0"
description = ""
authors = ["Aamos Vaara <aamos.vaara@vtt.fi>"]
license = "AGPL 3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
torch = "^2.3.0"
matplotlib = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
